--- a/pom.xml
+++ b/pom.xml
@@ -10,3 +10,5 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 <modules>
         <module>Selenium_Cucumber_2nd_Project</module>
 </modules>
+
+</project>
