--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,17 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
           <version>0.0.1-SNAPSHOT</version>
           <packaging>pom</packaging>
 
-
+  <build>
+  <pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>3.3.0</version>
+      </plugin>
+    </plugins>
+  </pluginManagement>
+</build>
+    
 
 </project>
